k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alcs
  labels:
    name: alcs
    environment: production
